alterabdo endpoint